--- a/list/views/header.html
+++ b/list/views/header.html
@@ -1,8 +1,11 @@
+<div class="row">
 <header>
     <a href="list.html"><img src="imgs/logo.png"></a>
 </header>
+</div>
 
-<div id="navbar"> 
+
+<div id="navbar" class="hidden-xs hidden-sm hidden-md">
         <ul class="list-inline">
             <!-- Add a dropdown menu -->
             <li class="dropdown">
