--- a/list/style.css
+++ b/list/style.css
@@ -43,9 +43,9 @@ li a {
     color: white;
     font-family: 'Oswald', sans-serif;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     text-decoration: none;
-    width: 120px;
+    width: 100px;
     height: 50px;
     line-height: 45px;
     margin-top: -4px;
@@ -77,39 +77,38 @@ li a:hover {
 
 .lista div {
 
-    height: 200px;
+    height: 30%;
     display: block;
     margin-bottom: 25px;
     border-bottom: 2px dashed grey;
+    border-top: 2px dashed grey;
 }
 
 .lista div img {
-    max-width: 95%;
-    max-height: 95%;
+    max-width: 60%;
+    max-height: 60%;
     margin-left: 5px;
-    margin-top: 5px;
+    margin-top: 3%;
+    margin-bottom: 3%;
     border-radius: 10px;
 }
 
 
 
-.lista div text {
-    font-family: 'Oswald', sans-serif;
-    float: left;
-    margin-left: 200px;
-    margin-top: -130px;
-}
+/*.lista div text {*/
+    /*font-family: 'Oswald', sans-serif;*/
+    /*font-size: small;*/
+    /*float: left;*/
+    /*margin-left: 210px;*/
+    /*margin-top: -210px;*/
+/*}*/
 
-.lista div p {
-    float: right;
-    margin-top: -65px;
-}
 
 
 #kup {
     float: right;
     margin-top: -40px;
-    margin-right: 5px;
+    margin-left: 5px;
     font-family: 'Oswald', sans-serif;
 }
 
@@ -119,8 +118,7 @@ li a:hover {
 
 #rozwin {
     float: right;
-    margin-top: -40px;
-    margin-right: 117px;
+    margin-top: -65px;
     font-family: 'Oswald', sans-serif;
 }
 
@@ -130,13 +128,14 @@ li a:hover {
 
 
 .filtry {
+    position: absolute;
     width: 20%;
     float: left;
-    margin-top: 100px;
+    margin-left: 2.5%;
+    margin-top: 10px;
     border: 2px solid grey;
     border-radius: 10px;
     font-family: 'Oswald', sans-serif;
-    
 }
 
 #filtruj {
@@ -152,6 +151,7 @@ li a:hover {
 }
 
 .kategorie {
+    position: absolute;
     width: 20%;
     height: 70px;
     float: left;
@@ -160,4 +160,13 @@ li a:hover {
     border: 2px solid grey;
     border-radius: 10px;
     font-family: 'Oswald', sans-serif;
+}
+
+dt {
+    text-align: center;
+    height: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
