--- a/list/views/main.html
+++ b/list/views/main.html
@@ -4,7 +4,8 @@
     <div class="kategorie col-lg-2 col-md-2 col-sm-12 col-xs-12">
         <p style="float: left; margin-left: 10px; margin-top: 10px;">Tu bedzie powrót do wyższych kategorii</p>
     </div>
-
+</div>
+<div class="row">
     <!-- FILTRY -->
     <div class="filtry col-lg-2 col-md-2 col-sm-12 col-xs-12">
         <div id="kat"> <input type="text" name="kat21" value="cena od" style="width: 33%; margin-top: 10px;" /> <input style="width: 33%; margin-top: 10px;" type="text" name="kat22" value="cena do"> </div>
@@ -22,39 +23,36 @@
 <!-- LISTA PRODUKTÓW -->
     <div class="lista" col-lg-10 col-md-10 col-sm-12 col-xs-12>
         <div>
+            <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
             <img src="imgs/produkt_img.png">
-            <h3 style="float: right;">Przykładowy przedmiot</h3>
-            <text>Przykładowy opis t-shirta. biały taki, bez fajerwerków, tylko cena za wysoka ale i tak kupisz jak zobaczysz że jest przeceniony</text>
             <p>Cena: 79.99,-</p>
-            <button type="submit" href="#" id="kup" class="btn-primary btn-sm">Do koszyka</button>
-            <button type="submit" href="#" id="rozwin" class="btn-primary btn-sm">Więcej informacji</button>
+            <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
+            <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
+
         </div>
 
         <div>
+            <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
             <img src="imgs/produkt2_img.png">
-            <h3 style="float: right;">Przykładowy przedmiot</h3>
-            <text>Przykładowy opis bluzy. tyż biała, bez fajerwerków, tylko cena za wysoka ale i tak kupisz jak zobaczysz że jest przeceniona</text>
             <p>Cena: 189.99,-</p>
-            <button type="submit" href="#" id="kup" class="btn-primary btn-sm">Do koszyka</button>
-            <button type="submit" href="#" id="rozwin" class="btn-primary btn-sm">Więcej informacji</button>
+            <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
+            <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
         </div>
 
         <div>
+            <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
             <img src="imgs/produkt3_img.png">
-            <h3 style="float: right;">Przykładowy przedmiot</h3>
-            <text>Przykładowy opis jeansów. zwykłe takie, jeansowe, tylko cena za wysoka ale i tak kupisz jak zobaczysz że są przecenione</text>
             <p>Cena: 119.99,-</p>
-            <button type="submit" href="#" id="kup" class="btn-primary btn-sm">Do koszyka</button>
-            <button type="submit" href="#" id="rozwin" class="btn-primary btn-sm">Więcej informacji</button>
+            <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
+            <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
         </div>
 
         <div>
+            <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
             <img src="imgs/produkt4_img.png">
-            <h3 style="float: right;">Przykładowy przedmiot</h3>
-            <text>Przykładowy opis czapki. Niczym się nie różni od innych oprócz znaczka adidasa za który doliczamy 1,5 stówy. A ty i tak zapłacisz.</text>
             <p>Cena: 189.99,-</p>
-            <button type="submit" href="#" id="kup" class="btn-primary btn-sm">Do koszyka</button>
-            <button type="submit" href="#" id="rozwin" class="btn-primary btn-sm">Więcej informacji</button>
+            <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
+            <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
         </div>
     </div>
 </div>
