--- a/list/views/header.html
+++ b/list/views/header.html
@@ -40,47 +40,6 @@
     </div>
     <a href="list.html"><img src="imgs/logo.png"></a>
 
-    <!--<div class="dropdown">-->
-        <!--<button class="btn btn-primary dropdown-toogle btn-md" type="button" id="dropdownMenu1" data-toogle="dropdown" aria-haspopup="true"-->
-                <!--aria-expanded="true"><i class="fas fa-bars"></i>-->
-                <!--<span class="caret"></span>-->
-        <!--</button>-->
-
-        <!--<ul class="dropdown-menu">-->
-            <!--<li class="dropdown-header">Męskie</li>-->
-                <!--<li><a href="#" style="font-size: smaller;">Kurtki</a></li>-->
-                <!--<li><a href="#" style="font-size: smaller;">T-Shirty</a></li>-->
-                <!--<li><a href="#" style="font-size: smaller;">Koszule</a></li>-->
-                <!--<li><a href="#" style="font-size: smaller;">Bluzy</a></li>-->
-
-            <!--<li role="separator" class="divider"></li>-->
-
-            <!--<li class="dropdown-header">Żeńskie</li>-->
-                <!--<li><a href="#" style="font-size: smaller;">Kurtki</a></li>-->
-                <!--<li><a href="#" style="font-size: smaller;">T-Shirty</a></li>-->
-                <!--<li><a href="#" style="font-size: smaller;">Koszule</a></li>-->
-                <!--<li><a href="#" style="font-size: smaller;">Bluzy</a></li>-->
-
-            <!--<li role="separator" class="divider"></li>-->
-
-            <!--<li class="dropdown-header">Dziecięce</li>-->
-                <!--<li><a href="#" style="font-size: smaller;">Kurtki</a></li>-->
-                <!--<li><a href="#" style="font-size: smaller;">T-Shirty</a></li>-->
-                <!--<li><a href="#" style="font-size: smaller;">Koszule</a></li>-->
-                <!--<li><a href="#" style="font-size: smaller;">Bluzy</a></li>-->
-
-            <!--<li role="separator" class="divider"></li>-->
-
-            <!--<li><a href="#">Inne</a></li>-->
-            <!--<li role="separator" class="divider"></li>-->
-            <!--<li><a href="#">Wyprzedaż</a></li>-->
-            <!--<li role="separator" class="divider"></li>-->
-            <!--<li><a href="#">Nowości</a></li>-->
-
-        <!--</ul>-->
-    <!--</div> -->
-
-
 </header>
 </div>
 
@@ -126,3 +85,8 @@
 
         </ul>
 </div>
+
+<div id="slider" style="width: 100%;
+                                    height: auto;
+                                    border-radius: 25px;
+                                    margin-left: 25px;"></div>
