--- a/single/views/single.html
+++ b/single/views/single.html
@@ -1,84 +1,94 @@
+<div id ="content" style="width: 70%; 
+                margin-left: auto; 
+                margin-right: auto;">
+                        <div class = "row">
+                            <h1>Przykladowy produkt</h1>
+                            </div>
 
-<html>
-<body>
-
-        <div class = "row">
-            <h1>Przykladowy produkt</h1>
-        </div>
-
-        <div class = "row">
-            <div id="gallery" class ="col-xs-12 col-sm-8 col-md-6 col-lg-6">
-                <img src="img/produkt_img.png">
-            </div>
-            <div id="info" class ="col-xs-12 hidden-sm col-md-3 col-lg-3">
-                <ul style="list-style-type:none">
-                    <li><span>Materiał:</span> Bawełna</li>
-                    <li><span>Kolor:</span> Biały</li>                      
-                </ul>
-            </div>
-            <div id="buy" class ="col-xs-12 col-sm-2 col-md-3 col-lg-3">
-                    Cena: 79.99
-                    <br>
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Rozmiary
-                        <span class="caret"></span></a>
-                        <ul class="dropdown-menu" item-width="30px">
-                            <li><a href="#">XL</a></li>
-                            <li><a href="#">L</a></li>
-                            <li><a href="#">M</a></li>
-                            <li><a href="#">S</a></li>
-                        </ul>
-            </div>
-        </div>
+                <div class = "row">
+                    <div id="gallery" class ="col-xs-12 col-sm-8 col-md-6 col-lg-6">
+                            <img src="../imgs/produkt_img.png">
+                    </div>
+                    <div id="info" class ="col-xs-12 hidden-sm col-md-3 col-lg-3">
+                                <ul style="list-style-type:none">
+                                    <li><span>Materiał:</span> Bawełna</li>
+                                    <li><span>Kolor:</span> Biały</li>                      
+                                </ul>
         
-        <div class = "row">
-            <hr>
-        </div>
 
-        <div class = "row">
-            <div class = "col-xs 0 col-sm-2"></div>
-            <div class = "col-xs 12 col-sm-8">
-                <p>Przykładowy opis bluzy. tyż biała, bez fajerwerków, tylko cena za wysoka ale i tak kupisz jak zobaczysz że jest przeceniona</p>
-            </div>
-            <div class = "col-xs 0 col-sm-2"></div>
-        </div>
 
-        <div class = "row">
-            <hr>
-        </div>
+                    </div>
+                    
+                    <div id="buy" class ="col-xs-12 col-sm-2 col-md-3 col-lg-3">
+                    
 
-        <div class = "row">
-            <h1>Polecane/Podobne produkty</h1>
-        </div>
+                            Cena: 79.99
+                            <br>
+                            
 
-        <div class = "row">
-            <div>
-                <div class = "col-xs 12 col-sm-4">
-                    <img src="img/produkt2_img.png" style="max-width: 95%;
+                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Rozmiary
+                                    <span class="caret"></span></a>
+                                    <ul class="dropdown-menu" item-width="30px">
+                                        <li><a href="#">XL</a></li>
+                                        <li><a href="#">L</a></li>
+                                        <li><a href="#">M</a></li>
+                                        <li><a href="#">S</a></li>
+                                    </ul>
+                               
+                            
+                        
+                        
+                    </div>
+                
+                </div>
+                <div class = "row">
+                    <hr>
+                </div>
+
+                <div class = "row">
+                    <div class = "col-xs 0 col-sm-2"></div>
+                    <div class = "col-xs 12 col-sm-8">
+                        <p>Przykładowy opis bluzy. tyż biała, bez fajerwerków, tylko cena za wysoka ale i tak kupisz jak zobaczysz że jest przeceniona</p>
+                    </div>
+                    <div class = "col-xs 0 col-sm-2"></div>
+                </div>
+
+                <div class = "row">
+                    <hr>
+                </div>
+
+                <div class = "row">
+                    <h1>Polecane/Podobne produkty</h1>
+                </div>
+                <div class = "row">
+                    <div>
+                    <div class = "col-xs 12 col-sm-4">
+                        <img src="../imgs/produkt2_img.png" style="max-width: 95%;
                         max-height: 95%;
                         margin-left: 5px;
                         margin-top: 5px;
                         border-radius: 10px;">
-                    <span><p>Przykladowy produkt</p></span>
-                </div>
-
-                <div class = "col-xs 12 col-sm-4">
-                    <img src="img/produkt3_img.png" style="max-width: 200px;
+                        <span><p>Przykladowy produkt</p></span>
+                    </div>
+                    <div class = "col-xs 12 col-sm-4">
+                        <img src="../imgs/produkt3_img.png" style="max-width: 200px;
                         max-height: 200px;
                         margin-left: 5px;
                         margin-top: 5px;
                         border-radius: 10px;">
-                    <span><p>Przykladowy produkt</p></span>
-                </div>
-
-                <div class = "col-xs 12 col-sm-4">
-                    <img src="img/produkt4_img.png" style="max-width: 200px;
+                        <span><p>Przykladowy produkt</p></span>
+                    </div>
+                    <div class = "col-xs 12 col-sm-4">
+                        <img src="../imgs/produkt4_img.png" style="max-width: 200px;
                         max-height: 200px;
                         margin-left: 5px;
                         margin-top: 5px;
                         border-radius: 10px;">
-                    <span><p>Przykladowy produkt</p></span>
+                        <span><p>Przykladowy produkt</p></span>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </body>
-</html>
+                </div>
+                
+
+
+    </div>
