--- a/partial/header.html
+++ b/partial/header.html
@@ -38,7 +38,7 @@
             <dt><a href="#">Nowości</a></dt>
         </ul>
     </div>
-    <a href="list.html"><img src="../imgs/logo.png"></a>
+    <a href="list.html"><img src="imgs/logo.png"></a>
 
 </header>
 </div>
