--- a/views/lista.html
+++ b/views/lista.html
@@ -1,6 +1,6 @@
 <div>
     <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
-    <img src="../imgs/produkt_img.png">
+    <img src="imgs/produkt_img.png">
     <p>Cena: 79.99,-</p>
     <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
     <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
@@ -9,7 +9,7 @@
 
 <div>
     <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
-    <img src="../imgs/produkt2_img.png">
+    <img src="imgs/produkt2_img.png">
     <p>Cena: 189.99,-</p>
     <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
     <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
@@ -17,7 +17,7 @@
 
 <div>
     <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
-    <img src="../imgs/produkt3_img.png">
+    <img src="imgs/produkt3_img.png">
     <p>Cena: 119.99,-</p>
     <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
     <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
@@ -25,7 +25,7 @@
 
 <div>
     <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
-    <img src="../imgs/produkt4_img.png">
+    <img src="imgs/produkt4_img.png">
     <p>Cena: 189.99,-</p>
     <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
     <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
