--- a/views/single.html
+++ b/views/single.html
@@ -7,7 +7,7 @@
 
                 <div class = "row">
                     <div id="gallery" class ="col-xs-12 col-sm-8 col-md-6 col-lg-6">
-                            <img src="../imgs/produkt_img.png">
+                            <img src="imgs/produkt_img.png">
                     </div>
                     <div id="info" class ="col-xs-12 hidden-sm col-md-3 col-lg-3">
                                 <ul style="list-style-type:none">
@@ -63,7 +63,7 @@
                 <div class = "row">
                     <div>
                     <div class = "col-xs 12 col-sm-4">
-                        <img src="../imgs/produkt2_img.png" style="max-width: 95%;
+                        <img src="imgs/produkt2_img.png" style="max-width: 95%;
                         max-height: 95%;
                         margin-left: 5px;
                         margin-top: 5px;
@@ -71,7 +71,7 @@
                         <span><p>Przykladowy produkt</p></span>
                     </div>
                     <div class = "col-xs 12 col-sm-4">
-                        <img src="../imgs/produkt3_img.png" style="max-width: 200px;
+                        <img src="imgs/produkt3_img.png" style="max-width: 200px;
                         max-height: 200px;
                         margin-left: 5px;
                         margin-top: 5px;
@@ -79,7 +79,7 @@
                         <span><p>Przykladowy produkt</p></span>
                     </div>
                     <div class = "col-xs 12 col-sm-4">
-                        <img src="../imgs/produkt4_img.png" style="max-width: 200px;
+                        <img src="imgs/produkt4_img.png" style="max-width: 200px;
                         max-height: 200px;
                         margin-left: 5px;
                         margin-top: 5px;
