--- a/partial/header.html
+++ b/partial/header.html
@@ -50,33 +50,75 @@
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Męskie
                 <span class="caret"></span></a>
-                <ul class="dropdown-menu" id="dropdown-menu">
-                    <li><a href="#">Kurtki</a></li>
-                    <li><a href="#">T-Shirty</a></li>
-                    <li><a href="#">Koszule</a></li>
-                    <li><a href="#">Bluzy</a></li>
+                <ul class="dropdown-menu multi-level" id="dropdown-menu">
+                        <li><a href="#">Kurtki</a></li>
+                        <li><a href="#">T-Shirty</a></li>
+                        <li><a href="#">Koszule</a></li>
+                        <li class="dropdown-submenu">
+                            <a tabindex="-1" href="#">Bluzy</a>
+                            <ul class="dropdown-menu" id="dropdown-menu1">
+                                <li><a tabindex="-1" href="#">Rozsuwane</a></li>
+                                <li class="dropdown-submenu">
+                                    <a href="#">Nierozsuwane</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">3rd level</a></li>
+                                        <li><a href="#">3rd level</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">Kaptur</a></li>
+                                <li><a href="#">Bez kaptura</a></li>
+                            </ul>
+                    </li>
                 </ul>
             </li>
 
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Żeńskie
                 <span class="caret"></span></a>
-                <ul class="dropdown-menu" id="dropdown-menu">
-                    <li><a href="#">Kurtki</a></li>
-                    <li><a href="#">T-Shirty</a></li>
-                    <li><a href="#">Koszule</a></li>
-                    <li><a href="#">Bluzy</a></li>
+                <ul class="dropdown-menu multi-level" id="dropdown-menu">
+                        <li><a href="#">Kurtki</a></li>
+                        <li><a href="#">T-Shirty</a></li>
+                        <li><a href="#">Koszule</a></li>
+                        <li class="dropdown-submenu">
+                            <a tabindex="-1" href="#">Bluzy</a>
+                            <ul class="dropdown-menu" id="dropdown-menu1">
+                                <li><a tabindex="-1" href="#">Rozsuwane</a></li>
+                                <li class="dropdown-submenu">
+                                    <a href="#">Nierozsuwane</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">3rd level</a></li>
+                                        <li><a href="#">3rd level</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">Kaptur</a></li>
+                                <li><a href="#">Bez kaptura</a></li>
+                            </ul>
+                    </li>
                 </ul>
             </li>
 
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dziecięce
                 <span class="caret"></span></a>
-                <ul class="dropdown-menu" id="dropdown-menu">
-                    <li><a href="#">Kurtki</a></li>
-                    <li><a href="#">T-Shirty</a></li>
-                    <li><a href="#">Koszule</a></li>
-                    <li><a href="#">Bluzy</a></li>
+                <ul class="dropdown-menu multi-level" id="dropdown-menu">
+                        <li><a href="#">Kurtki</a></li>
+                        <li><a href="#">T-Shirty</a></li>
+                        <li><a href="#">Koszule</a></li>
+                        <li class="dropdown-submenu">
+                            <a tabindex="-1" href="#">Bluzy</a>
+                            <ul class="dropdown-menu" id="dropdown-menu1">
+                                <li><a tabindex="-1" href="#">Rozsuwane</a></li>
+                                <li class="dropdown-submenu">
+                                    <a href="#">Nierozsuwane</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">3rd level</a></li>
+                                        <li><a href="#">3rd level</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">Kaptur</a></li>
+                                <li><a href="#">Bez kaptura</a></li>
+                            </ul>
+                    </li>
                 </ul>
             </li>
             <li><a href="#">Inne</a></li>
