--- a/style/liststyle.css
+++ b/style/liststyle.css
@@ -13,7 +13,7 @@ header {
     margin-left: auto;
 }
 
-header img {
+header>a>img {
     max-width: 100%;
     max-height: 100%;
     border-radius: 25px;
@@ -38,7 +38,7 @@ li {
     margin-left: -1px;
 }
  
-li a {
+li>a {
     display: block;
     color: white;
     font-family: 'Oswald', sans-serif;
@@ -51,7 +51,7 @@ li a {
     margin-top: -4px;
 }
 
-li a:hover {
+li>a:hover {
     background-color: white;
     color: black;
     border-right: 1px solid white;
@@ -75,7 +75,7 @@ li a:hover {
     margin-top: 10px;
 }
 
-.lista div {
+.lista>div>div>div {
 
     height: 30%;
     display: block;
@@ -84,7 +84,7 @@ li a:hover {
     border-top: 2px dashed grey;
 }
 
-.lista div img {
+.lista>div>div>div>img {
     max-width: 60%;
     max-height: 60%;
     margin-left: 5px;
@@ -161,4 +161,10 @@ dt {
     border-radius: 5px;
     margin-top: 2px;
     margin-bottom: 2px;
+}
+
+.paginator>li {
+    width: 20px;
+    height: 20px;
+    font-size: 8px;
 }
