--- a/views/lista.html
+++ b/views/lista.html
@@ -1,32 +1,57 @@
-<div>
-    <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
-    <img src="imgs/produkt_img.png">
-    <p>Cena: 79.99,-</p>
-    <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
-    <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
+<div class="row">
+    <div>
+        <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
+        <img src="imgs/produkt_img.png">
+        <p>Cena: 79.99,-</p>
+        <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
+        <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
 
+    </div>
+
+    <div>
+        <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
+        <img src="imgs/produkt2_img.png">
+        <p>Cena: 189.99,-</p>
+        <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
+        <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
+    </div>
+
+    <div>
+        <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
+        <img src="imgs/produkt3_img.png">
+        <p>Cena: 119.99,-</p>
+        <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
+        <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
+    </div>
+
+    <div>
+        <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
+        <img src="imgs/produkt4_img.png">
+        <p>Cena: 189.99,-</p>
+        <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
+        <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
+    </div>
 </div>
 
-<div>
-    <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
-    <img src="imgs/produkt2_img.png">
-    <p>Cena: 189.99,-</p>
-    <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
-    <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
-</div>
-
-<div>
-    <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
-    <img src="imgs/produkt3_img.png">
-    <p>Cena: 119.99,-</p>
-    <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
-    <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
-</div>
-
-<div>
-    <h3 style="float: right; font-family: 'Oswald', sans-serif;">Przykładowy przedmiot</h3>
-    <img src="imgs/produkt4_img.png">
-    <p>Cena: 189.99,-</p>
-    <button type="submit" href="#" id="kup" class="btn-primary btn-xs">Do koszyka</button>
-    <button type="submit" href="#" id="rozwin" class="btn-primary btn-xs">Szczegóły</button>
+<div class="row">
+    <nav>
+        <ul class="pagination">
+          <li>
+            <a href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li>
+            <a href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      
 </div>
