--- a/views/lista.html
+++ b/views/lista.html
@@ -41,7 +41,7 @@
               <span aria-hidden="true">&laquo;</span>
             </a>
           </li>
-          <li><a href="#">1</a></li>
+          <li><a class="active" href="#">1</a></li>
           <li><a href="#">2</a></li>
           <li><a href="#">3</a></li>
           <li><a href="#">4</a></li>
