--- a/partial/header.html
+++ b/partial/header.html
@@ -1,51 +1,12 @@
 <div class="row">
-<header>
-    <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle btn-md hidden-lg hidden-md" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            <i class="fas fa-bars"></i>
-            <!-- Display icon in button -->
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" style="max-width: 70px;">
-            <li class="dropdown-header">Męskie</li><br><br>
-            <dt><a href="#" style="font-size: smaller;">Kurtki</a></dt>
-            <dt><a href="#" style="font-size: smaller;">T-Shirty</a></dt>
-            <dt><a href="#" style="font-size: smaller;">Koszule</a></dt>
-            <dt><a href="#" style="font-size: smaller;">Bluzy</a></dt>
-
-            <li role="separator" class="divider"></li>
-
-            <li class="dropdown-header">Żeńskie</li><br><br>
-            <dt><a href="#" style="font-size: smaller;">Kurtki</a></dt>
-            <dt><a href="#" style="font-size: smaller;">T-Shirty</a></dt>
-            <dt><a href="#" style="font-size: smaller;">Koszule</a></dt>
-            <dt><a href="#" style="font-size: smaller;">Bluzy</a></dt>
-
-            <li role="separator" class="divider"></li>
-
-            <li class="dropdown-header">Dziecięce</li><br><br>
-            <dt><a href="#" style="font-size: smaller;">Kurtki</a></dt>
-            <dt><a href="#" style="font-size: smaller;">T-Shirty</a></dt>
-            <dt><a href="#" style="font-size: smaller;">Koszule</a></dt>
-            <dt><a href="#" style="font-size: smaller;">Bluzy</a></dt>
-
-            <li role="separator" class="divider"></li><br>
-
-            <dt><a href="#">Inne</a></dt>
-            <li role="separator" class="divider"></li>
-            <dt><a href="#">Wyprzedaż</a></dt>
-            <li role="separator" class="divider"></li>
-            <dt><a href="#">Nowości</a></dt>
-        </ul>
-    </div>
-    <a href="list.html"><img src="imgs/logo.png"></a>
-
-</header>
+    <header>
+        <a href="#/"><img src="imgs/logo.png"></a>
+    </header>
 </div>
 
 
-<div id="navbar" class="hidden-xs hidden-sm">
-        <ul class="list-inline">
+<div class="hidden-xs hidden-sm">
+        <ul class="list-inline" id="navbar">
             <!-- Add a dropdown menu -->
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Męskie
@@ -54,10 +15,12 @@
                         <li><a href="#">Kurtki</a></li>
                         <li><a href="#">T-Shirty</a></li>
                         <li><a href="#">Koszule</a></li>
+
                         <li class="dropdown-submenu">
                             <a tabindex="-1" href="#">Bluzy</a>
                             <ul class="dropdown-menu" id="dropdown-menu1">
                                 <li><a tabindex="-1" href="#">Rozsuwane</a></li>
+
                                 <li class="dropdown-submenu">
                                     <a href="#">Nierozsuwane</a>
                                     <ul class="dropdown-menu">
@@ -65,60 +28,57 @@
                                         <li><a href="#">3rd level</a></li>
                                     </ul>
                                 </li>
+
                                 <li><a href="#">Kaptur</a></li>
                                 <li><a href="#">Bez kaptura</a></li>
                             </ul>
-                    </li>
+                        </li>
                 </ul>
             </li>
 
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Żeńskie
                 <span class="caret"></span></a>
-                <ul class="dropdown-menu multi-level" id="dropdown-menu">
-                        <li><a href="#">Kurtki</a></li>
-                        <li><a href="#">T-Shirty</a></li>
-                        <li><a href="#">Koszule</a></li>
-                        <li class="dropdown-submenu">
-                            <a tabindex="-1" href="#">Bluzy</a>
-                            <ul class="dropdown-menu" id="dropdown-menu1">
-                                <li><a tabindex="-1" href="#">Rozsuwane</a></li>
-                                <li class="dropdown-submenu">
-                                    <a href="#">Nierozsuwane</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">3rd level</a></li>
-                                        <li><a href="#">3rd level</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Kaptur</a></li>
-                                <li><a href="#">Bez kaptura</a></li>
-                            </ul>
+                <ul class="dropdown-menu" id="dropdown-menu">
+                    <li><a href="#">Kurtki</a></li>
+                    <li><a href="#">T-Shirty</a></li>
+                    <li><a href="#">Koszule</a></li>
+                    <li><a href="#">Bluzy</a>
                     </li>
                 </ul>
             </li>
 
+
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+                    <li><a href="#">Some action</a></li>
+                    <li><a href="#">Some other action</a></li>
+                    <li class="divider"></li>
+                    <li class="dropdown-submenu">
+                      <a tabindex="-1" href="#">Hover me for more options</a>
+                      <ul class="dropdown-menu">
+                        <li><a tabindex="-1" href="#">Second level</a></li>
+                        <li class="dropdown-submenu">
+                            <a href="#">Even More..</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">3rd level</a></li>
+                                <li><a href="#">3rd level</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Second level</a></li>
+                        <li><a href="#">Second level</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Dziecięce
                 <span class="caret"></span></a>
-                <ul class="dropdown-menu multi-level" id="dropdown-menu">
-                        <li><a href="#">Kurtki</a></li>
-                        <li><a href="#">T-Shirty</a></li>
-                        <li><a href="#">Koszule</a></li>
-                        <li class="dropdown-submenu">
-                            <a tabindex="-1" href="#">Bluzy</a>
-                            <ul class="dropdown-menu" id="dropdown-menu1">
-                                <li><a tabindex="-1" href="#">Rozsuwane</a></li>
-                                <li class="dropdown-submenu">
-                                    <a href="#">Nierozsuwane</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">3rd level</a></li>
-                                        <li><a href="#">3rd level</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Kaptur</a></li>
-                                <li><a href="#">Bez kaptura</a></li>
-                            </ul>
-                    </li>
+                <ul class="dropdown-menu" id="dropdown-menu">
+                    <li><a href="#">Kurtki</a></li>
+                    <li><a href="#">T-Shirty</a></li>
+                    <li><a href="#">Koszule</a></li>
+                    <li><a href="#">Bluzy</a></li>
                 </ul>
             </li>
             <li><a href="#">Inne</a></li>
