--- a/style/liststyle.css
+++ b/style/liststyle.css
@@ -13,7 +13,7 @@ header {
     margin-left: auto;
 }
 
-header>a>img {
+header img {
     max-width: 100%;
     max-height: 100%;
     border-radius: 25px;
@@ -38,12 +38,12 @@ li {
     margin-left: -1px;
 }
  
-li>a {
+li a {
     display: block;
     color: white;
     font-family: 'Oswald', sans-serif;
     text-align: center;
-    font-size: 18px;
+    font-size: 14px;
     text-decoration: none;
     width: 100px;
     height: 50px;
@@ -51,7 +51,7 @@ li>a {
     margin-top: -4px;
 }
 
-li>a:hover {
+li a:hover {
     background-color: white;
     color: black;
     border-right: 1px solid white;
@@ -75,15 +75,16 @@ li>a:hover {
     margin-top: 10px;
 }
 
-.lista>div>div>div {
+.lista div {
 
     height: 30%;
     display: block;
     margin-bottom: 25px;
+    border-bottom: 2px dashed grey;
     border-top: 2px dashed grey;
 }
 
-.lista>div>div>div>img {
+.lista div img {
     max-width: 60%;
     max-height: 60%;
     margin-left: 5px;
@@ -160,16 +161,4 @@ dt {
     border-radius: 5px;
     margin-top: 2px;
     margin-bottom: 2px;
-}
-
-.paginator>li {
-    width: 20px;
-    height: 20px;
-    font-size: 8px;
-}
-
-.pagination>li>.active {
-    background-color: lightblue;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
 }
