--- a/style/liststyle.css
+++ b/style/liststyle.css
@@ -162,3 +162,67 @@ dt {
     margin-top: 2px;
     margin-bottom: 2px;
 }
+
+#searchbox {
+    float: right;
+    margin-right: 50px;
+    margin-top: -100px;
+}
+
+#search {
+    background: transparent;
+    border: none;
+}
+
+#login_block {
+    display: none;
+    position: absolute;
+    float:right;
+    margin-left: 55%;
+    margin-top: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 4px;
+    padding-right: 4px;
+    border: 2px outset whitesmoke;
+    border-radius: 5px;
+    background-color: lightgrey;
+    
+}
+
+
+#register {
+    position: absolute;
+    float: left;
+    margin-left: 50px;
+    margin-top: 80px;
+}
+
+#dane {
+    position: absolute;
+    float: left;
+    margin-left: 340px;
+    margin-top: 80px;
+}
+
+#submit {
+	float: right;
+	margin-top: 250px;
+	margin-right: 50%;
+	background-color: lightgrey;
+}
+
+.pola {
+	width: 250px;
+    border: 1px outset white;
+    border-radius: 3px;
+}
+
+#okno_rejestracji {
+	width: 50%;
+	margin-top: 30px;
+	padding-bottom: 10px;
+	padding-top: -20px;
+	border: 2px solid black;
+	border-radius: 8px;
+}
