--- a/partial/header.html
+++ b/partial/header.html
@@ -101,10 +101,4 @@
 <div id="slider" style="width: 100%;
                                 height: auto;
                                 border-radius: 25px;
-                                margin-left: 25px;"> 
-                                <img src="imgs/slider/slajd1.jpg" 
-                                style="width: 95%; height: auto; 
-                                        margin-left: auto; 
-                                        margin-right: auto; 
-                                        border-radius: 25px;"> 
-</div>
+                                margin-left: 25px;"></div>
