--- a/views/register.html
+++ b/views/register.html
@@ -1,14 +1,15 @@
 <div class="container" id="okno_rejestracji">
-	<form method="post">
+	<form method="post" action="http://shopgen.pl/dev/api/registration">
             <div  id= "register">
                 <input class="pola"        type="text"         placeholder="E-mail"         name="email" /><br>
                 <input class="pola"        type="password"     placeholder="Haslo"          name="password" /><br>
-                <input class="pola"        type="password"     placeholder="Re Haslo"       name="repassword" /><br>
+                <input class="pola"        type="password"     placeholder="Re Haslo"       name="rePassword" /><br>
             </div>
         
             <div id= "dane">
                 <input class="pola"        type="text"         placeholder="Imie"           name="name" /><br>
-                <input class="pola"        type="text"         placeholder="Nazwisko"       name="lastname" /><br>
+                <input class="pola"        type="text"         placeholder="Nazwisko"       name="surname" /><br>
+                <input type="hidden"  value="customer"                                      name="roleName" />
             </div>    
             <button id="submit" type="submit" class="btn" name="reg_user">Zarejestruj</button>
         </form>
