--- a/partial/header.html
+++ b/partial/header.html
@@ -3,8 +3,8 @@
 								margin-right: 40px;" onclick="displayblock();"><i class="fas fa-align-justify"></i> Zaloguj</button>
     <div id="login_block">
         <form method="post" action="http://shopgen.pl/dev/api/login">
-            <input type="email" name="email_login" placeholder="e-mail"><br>
-            <input type="password" name="pass_login" placeholder="password"><br>
+            <input type="email" name="email" placeholder="e-mail"><br>
+            <input type="password" name="password" placeholder="password"><br>
             <button type="submit" name="submit_login" style="margin-top: 2px;">Zaloguj</button>
 			<button type="button" name="goto_reg" style="margin-top: 2px;" onclick="showRegister();">Register</button>
         </form>
