--- a/partial/header.html
+++ b/partial/header.html
@@ -2,7 +2,7 @@
     <button id="log_in"  style="float: right;
 								margin-right: 40px;" onclick="displayblock();"><i class="fas fa-align-justify"></i> Zaloguj</button>
     <div id="login_block">
-        <form id="login" method="post" action="http://shopgen.pl/dev/api/login">
+        <form id="login" method="post">
             <input type="email" name="email" placeholder="e-mail"><br>
             <input type="password" name="password" placeholder="password"><br>
             <button type="submit" name="submit_login" style="margin-top: 2px;">Zaloguj</button>
