--- a/partial/header.html
+++ b/partial/header.html
@@ -5,7 +5,7 @@
         <form id="login" method="post">
             <input type="email" name="email" placeholder="e-mail"><br>
             <input type="password" name="password" placeholder="password"><br>
-            <button type="submit" name="submit_login" style="margin-top: 2px;">Zaloguj</button>
+            <button type="submit" name="submit_login" style="margin-top: 2px;" onclick="login();">Zaloguj</button>
 			<button type="button" name="goto_reg" style="margin-top: 2px;" onclick="showRegister();">Register</button>
         </form>
     </div>
