--- a/partial/header.html
+++ b/partial/header.html
@@ -12,6 +12,7 @@
     <header>
         <a href="index.html"><img src="imgs/logo.png"></a>
     </header>
+    <script>prepare_login_form_handler();</script>
 </div> 	
 
 
@@ -102,3 +103,4 @@
                                 height: auto;
                                 border-radius: 25px;
                                 margin-left: 25px;"> </div>
+<script src="js/slider.js"></script>
