--- a/views/register.html
+++ b/views/register.html
@@ -1,17 +1,19 @@
-<div class="container" id="okno_rejestracji">
-    <form method="post" id="registration">
-        <div id="register">
-            <input class="pola" type="text" placeholder="E-mail" name="email"/><br>
-            <input class="pola" type="password" placeholder="Haslo" name="password"/><br>
-            <input class="pola" type="password" placeholder="Re Haslo" name="rePassword"/><br>
-        </div>
+<div class="row">
+    <div class="container col-lg-12 col-md-12 col-sm-12 col-xs-12" id="okno_rejestracji">
+        <form method="post" id="registration">
+            <div id="register" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <input class="pola" type="text" placeholder="E-mail" name="email"/><br>
+                <input class="pola" type="password" placeholder="Haslo" name="password"/><br>
+                <input class="pola" type="password" placeholder="Re Haslo" name="rePassword"/><br>
+            </div>
 
-        <div id="dane">
-            <input class="pola" type="text" placeholder="Imie" name="name"/><br>
-            <input class="pola" type="text" placeholder="Nazwisko" name="surname"/><br>
-            <input type="hidden" value="customer" name="roleName"/>
-        </div>
-        <button id="submit" type="submit" class="btn" name="reg_user">Zarejestruj</button>
-    </form>
-    <script>prepare_registration_form_handler();</script>
+            <div id="dane" class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <input class="pola" type="text" placeholder="Imie" name="name"/><br>
+                <input class="pola" type="text" placeholder="Nazwisko" name="surname"/><br>
+                <input type="hidden" value="customer" name="roleName"/>
+            </div>
+            <button id="submit" type="submit" class="btn" name="reg_user">Zarejestruj</button>
+        </form>
+        <script>prepare_registration_form_handler();</script>
+    </div>
 </div>
