--- a/views/register.html
+++ b/views/register.html
@@ -1,13 +1,12 @@
-<div class="row">
-    <div class="container col-lg-12 col-md-12 col-sm-12 col-xs-12" id="okno_rejestracji">
+    <div class="container" id="okno_rejestracji">
         <form method="post" id="registration">
-            <div id="register" class="col-lg-4 col-md-4 col-sm-8 col-xs-12">
+            <div id="register" class="col-sm-12 col-xs-12">
                 <input class="pola" type="text" placeholder="E-mail" name="email"/><br>
                 <input class="pola" type="password" placeholder="Haslo" name="password"/><br>
                 <input class="pola" type="password" placeholder="Re Haslo" name="rePassword"/><br>
             </div>
 
-            <div id="dane" class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <div id="dane" class="col-sm-12 col-xs-12">
                 <input class="pola" type="text" placeholder="Imie" name="name"/><br>
                 <input class="pola" type="text" placeholder="Nazwisko" name="surname"/><br>
                 <input type="hidden" value="customer" name="roleName"/>
@@ -16,4 +15,3 @@
         </form>
         <script>prepare_registration_form_handler();</script>
     </div>
-</div>
