--- a/views/register.html
+++ b/views/register.html
@@ -1,4 +1,5 @@
-    <div class="container" id="okno_rejestracji">
+<div class="container">
+    <div id="okno_rejestracji">
         <form method="post" id="registration">
             <div id="register" class="col-sm-12 col-xs-12">
                 <input class="pola" type="text" placeholder="E-mail" name="email"/><br>
@@ -15,3 +16,4 @@
         </form>
         <script>prepare_registration_form_handler();</script>
     </div>
+</div>
