poprawki5 - current user

--- a/partial/header.html
+++ b/partial/header.html
@@ -9,12 +9,16 @@
 			<button type="button" name="goto_reg" style="margin-top: 2px;" onclick="showRegister();">Register</button>
         </form>
     </div>
+    <div id="login_user_data">
+
+    </div>
     <header>
         <a href="index.html"><img src="imgs/logo.png"></a>
     </header>
-    <script>prepare_login_form_handler();</script>
-</div> 	
-
+    <script>
+        prepare_login_form_handler();
+    </script>
+</div>
 
 <div class="hidden-xs hidden-sm">
         <ul class="list-inline" id="navbar">
