--- a/partial/header.html
+++ b/partial/header.html
@@ -8,11 +8,11 @@
             <button type="submit" name="submit_login" style="margin-top: 2px;" >Zaloguj</button>
 			<button type="button" name="goto_reg" style="margin-top: 2px;" onclick="showRegister();">Register</button>
         </form>
-        <div id="logout">
+        <div id="logout" style="display: none;">
             <button type="button" name="logout" style="margin-top: 2px;" onclick="logout()">Logout</button>
         </div>
     </div>
-    <div id="login_user_data">
+    <div id="login_user_data" style="display: none;">
     </div>
     <header>
         <a href="index.html"><img src="imgs/logo.png"></a>
