--- a/partial/header.html
+++ b/partial/header.html
@@ -1,6 +1,9 @@
 <div class="row">
     <button id="log_in"  style="float: right;
 								margin-right: 40px;" onclick="displayblock();"><i class="fas fa-align-justify"></i> Zaloguj</button>
+    <div id="logout" style="display: none;">
+        <button type="button" name="logout" style="margin-top: 2px;" onclick="logout()">Logout</button>
+    </div>
     <div id="login_block">
         <form id="login" method="post">
             <input type="email" name="email" placeholder="e-mail"><br>
@@ -8,9 +11,7 @@
             <button type="submit" name="submit_login" style="margin-top: 2px;" >Zaloguj</button>
 			<button type="button" name="goto_reg" style="margin-top: 2px;" onclick="showRegister();">Register</button>
         </form>
-        <div id="logout" style="display: none;">
-            <button type="button" name="logout" style="margin-top: 2px;" onclick="logout()">Logout</button>
-        </div>
+
     </div>
     <div id="login_user_data" style="display: none;">
     </div>
@@ -19,6 +20,7 @@
     </header>
     <script>
         prepare_login_form_handler();
+        switch_login_items();
     </script>
 </div>
 
