poprawki6 - lepsze logowanie - fix style

--- a/partial/header.html
+++ b/partial/header.html
@@ -1,7 +1,7 @@
 <div class="row">
     <button id="log_in"  style="float: right;
 								margin-right: 40px;" onclick="displayblock();"><i class="fas fa-align-justify"></i> Zaloguj</button>
-    <div id="logout" style="display: none;">
+    <div id="logout">
         <button type="button" name="logout" style="margin-top: 2px;" onclick="logout()">Logout</button>
     </div>
     <div id="login_block">
@@ -13,7 +13,7 @@
         </form>
 
     </div>
-    <div id="login_user_data" style="display: none;">
+    <div id="login_user_data">
     </div>
     <header>
         <a href="index.html"><img src="imgs/logo.png"></a>
