poprawki6 - lepsze logowanie - fix

--- a/partial/header.html
+++ b/partial/header.html
@@ -1,8 +1,8 @@
 <div class="row">
     <button id="log_in"  style="float: right;
 								margin-right: 40px;" onclick="displayblock();"><i class="fas fa-align-justify"></i> Zaloguj</button>
-    <div id="logout">
-        <button type="button" name="logout" style="margin-top: 2px;" onclick="logout()">Logout</button>
+    <div id="logout" style="float: right; margin-right: 40px;">
+        <button type="button" name="logout" style="margin-top: 2px;" onclick="logout()">Wyloguj</button>
     </div>
     <div id="login_block">
         <form id="login" method="post">
@@ -13,7 +13,7 @@
         </form>
 
     </div>
-    <div id="login_user_data">
+    <div id="login_user_data" style="float: right; margin-right: 50px;">
     </div>
     <header>
         <a href="index.html"><img src="imgs/logo.png"></a>
