--- a/partial/header.html
+++ b/partial/header.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="padding: 20px;">
     <button id="log_in"  style="float: right;
 								margin-right: 40px;" onclick="displayblock();"><i class="fas fa-align-justify"></i> Zaloguj</button>
     <div id="logout" style="float: right; margin-right: 40px;">
